Start game and refactors  * added some java doc comments  * added start game function  * refactored the suit enum in swagger file  * added unit tests for the card power  * refactored unit tests for game service
